--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -188,10 +188,10 @@
     <ClInclude Include="win32_Commands.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PluginConnectorAnimation.h">
+    <ClInclude Include="PlugConnectorAnimation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PluginIoNeuronAnimation.h">
+    <ClInclude Include="PlugIoNeuronAnimation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SingleNobAnimation.h">
