--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -188,9 +188,6 @@
     <ClInclude Include="win32_Commands.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PlugConnectorAnimation.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="PlugIoNeuronAnimation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -209,10 +206,13 @@
     <ClInclude Include="MakeConnAnimation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PlugConnectors.h">
+    <ClInclude Include="PlugIoNeurons.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PlugIoNeurons.h">
+    <ClInclude Include="PlugIoConnectors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PlugIoConnectorAnimation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
