--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="AutoOpen.h" />
     <ClInclude Include="BaseKnot.h" />
     <ClInclude Include="ClosedConnector.h" />
+    <ClInclude Include="CopySelectedNobs.h" />
     <ClInclude Include="InputConnector.h" />
     <ClInclude Include="IoNeuron.h" />
     <ClInclude Include="IoConnector.h" />
@@ -237,6 +238,7 @@
     <ClCompile Include="Analyzer.cpp" />
     <ClCompile Include="BaseKnot.cpp" />
     <ClCompile Include="ClosedConnector.cpp" />
+    <ClCompile Include="CopySelectedNobs.cpp" />
     <ClCompile Include="InputConnector.cpp" />
     <ClCompile Include="IoNeuron.cpp" />
     <ClCompile Include="IoConnector.cpp" />
