--- a/NNet/NNetSimu/WindowConfiguration24.cnf
+++ b/NNet/NNetSimu/WindowConfiguration24.cnf
@@ -1,7 +1,7 @@
 MoveWindow IDM_APPL_WINDOW -1928 1072 1936 1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_DESC_WINDOW -652 1839 373 289
-ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_DESC_WINDOW SW_HIDE
 MoveWindow IDM_CRSR_WINDOW -292 1372 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MINI_WINDOW -292 1082 299 297
@@ -9,7 +9,7 @@ ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MAIN_WINDOW -1920 1124 1920 974
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MONITOR_WINDOW -1502 1906 1338 288
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
 MoveWindow IDM_PARAM_WINDOW -289 1567 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -290 1845 301 281
